--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,1 +1,11 @@
 @import url(../vendor/normalize.css);
+@import url(../vendor/fonts.css);
+
+@import url(../blocks/page/page.css);
+@import url(../blocks/page/__container/page__container.css);
+
+@import url(../blocks/section/section.css);
+
+@import url(../blocks/content/content.css);
+@import url(../blocks/page/__content/page__content.css);
+@import url(../blocks/content/__section/content__section.css);
