--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -9,3 +9,24 @@
 @import url(../blocks/content/content.css);
 @import url(../blocks/page/__content/page__content.css);
 @import url(../blocks/content/__section/content__section.css);
+
+@import url(../blocks/header/header.css);
+@import url(../blocks/page/__header/page__header.css);
+@import url(../blocks/header/__container/header__container.css);
+@import url(../blocks/header/__logo-wrapper/header__logo-wrapper.css);
+@import url(../blocks/burger-menu/burger-menu.css);
+@import url(../blocks/button/button.css);
+@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__logo/_mobile/header__logo_mobile.css);
+@import url(../blocks/header/__search-form/header__search-form.css);
+@import url(../blocks/header/__search-input/header__search-input.css);
+@import url(../blocks/header/__search-button/header__search-button.css);
+@import url(../blocks/header/__nav/header__nav.css);
+@import url(../blocks/header/__nav-container/header__nav-container.css);
+@import url(../blocks/header/__nav-item/header__nav-item.css);
+@import url(../blocks/header/__nav-icon/header__nav-icon.css);
+@import url(../blocks/header/__nav-icon/_cart/header__nav-icon_cart.css);
+@import url(../blocks/header/__nav-link/header__nav-link.css);
+@import url(../blocks/header/__nav-span/header__nav-span.css);
+@import url(../blocks/header/__nav-notify/header__nav-notify.css);
+@import url(../blocks/header/__mobile-search/header__mobile-search.css);
