--- a/src/blocks/item-count-badge/item-count-badge.css
+++ b/src/blocks/item-count-badge/item-count-badge.css
@@ -1,9 +1,8 @@
-.header__nav-notify {
-  position: absolute;
-  top: -4px;
-  right: 8px;
+.item-count-badge {
+  padding-inline: 4px;
   display: inline-flex;
-  width: 16px;
+  min-width: 16px;
+  width: fit-content;
   height: 16px;
   flex-direction: column;
   justify-content: center;
@@ -16,4 +15,5 @@
   font-size: 10px;
   font-weight: 700;
   line-height: 18px;
+  box-sizing: border-box;
 }
