--- a/src/blocks/delivery-method/__address-work-hours/delivery-method__address-work-hours.css
+++ b/src/blocks/delivery-method/__address-work-hours/delivery-method__address-work-hours.css
@@ -2,7 +2,7 @@
   margin-top: 4px;
   display: flex;
   flex-direction: row;
-  align-items: flex-end;
+  align-items: center;
   justify-content: flex-start;
   gap: 4px;
 }
