--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -55,6 +55,20 @@
 @import url(../blocks/checkbox/__input/checkbox__input.css);
 @import url(../blocks/checkbox/__span/checkbox__span.css);
 
+@import url(../blocks/dropdown/__button/dropdown__button.css);
+@import url(../blocks/divider-line/divider-line.css);
+@import url(../blocks/divider-line/_absent-goods/divider-line_absent-goods.css);
+@import url(../blocks/like-button/like-button.css);
+@import url(../blocks/delete-button/delete-button.css);
+
+@import url(../blocks/absent-goods/__title-wrapper/absent-goods__title-wrapper.css);
+@import url(../blocks/absent-goods/__list/absent-goods__list.css);
+@import url(../blocks/absent-goods/__item/absent-goods__item.css);
+@import url(../blocks/absent-goods/__content-wrapper/absent-goods__content-wrapper.css);
+@import url(../blocks/absent-goods/__photo/absent-goods__photo.css);
+@import url(../blocks/absent-goods/__description/absent-goods__description.css);
+@import url(../blocks/absent-goods/__button-wrapper/absent-goods__button-wrapper.css);
+
 @import url(../blocks/info-block/info-block.css);
 @import url(../blocks/info-block/__title-wrapper/info-block__title-wrapper.css);
 @import url(../blocks/order-summary/order-summary.css);
