--- a/src/blocks/absent-goods/__item/absent-goods__item.css
+++ b/src/blocks/absent-goods/__item/absent-goods__item.css
@@ -1,6 +1,7 @@
 .absent-goods__item {
-  max-width: 765px;
-  min-width: 638px;
+  width: 100%;
+  padding-right: 125px;
+  box-sizing: border-box;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
