--- a/src/blocks/absent-goods/__list/absent-goods__list.css
+++ b/src/blocks/absent-goods/__list/absent-goods__list.css
@@ -1,10 +1,3 @@
 .absent-goods__list {
-  margin: 11px 0 0;
-  padding: 0;
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: 32px;
+  margin-top: 11px;
 }
