--- a/src/blocks/cart-items-list/__buttons/cart-items-list__buttons.css
+++ b/src/blocks/cart-items-list/__buttons/cart-items-list__buttons.css
@@ -1,8 +1,7 @@
-.content__column {
-  width: 100%;
+.cart-items-list__buttons {
   display: flex;
   flex-direction: column;
+  align-items: flex-end;
   justify-content: flex-start;
-  align-items: stretch;
-  gap: 34px;
+  row-gap: 8px;
 }
