--- a/src/blocks/cart-items-list/__warehouse/cart-items-list__warehouse.css
+++ b/src/blocks/cart-items-list/__warehouse/cart-items-list__warehouse.css
@@ -1,8 +1,7 @@
-.content__column {
-  width: 100%;
+.cart-items-list__warehouse {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   justify-content: flex-start;
-  align-items: stretch;
-  gap: 34px;
+  gap: 2px;
 }
