--- a/src/blocks/delete-button/delete-button.css
+++ b/src/blocks/delete-button/delete-button.css
@@ -7,4 +7,9 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: 20px 20px;
+  cursor: pointer;
+}
+
+.delete-button:hover {
+  background-image: url(../../images/delete_icon_hover.svg);
 }
