--- a/src/blocks/popup/__radio/popup__radio.css
+++ b/src/blocks/popup/__radio/popup__radio.css
@@ -1,8 +1,8 @@
-.credit-card-number {
+.popup__radio {
   width: 100%;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   justify-content: flex-start;
-  gap: 9px;
+  gap: 10px;
 }
