--- a/src/blocks/cart-items-list/__price-wrapper/cart-items-list__price-wrapper.css
+++ b/src/blocks/cart-items-list/__price-wrapper/cart-items-list__price-wrapper.css
@@ -6,3 +6,9 @@
   justify-content: flex-start;
   gap: 7px;
 }
+
+@media screen and (max-width: 1023px) {
+  .cart-items-list__price-wrapper {
+    display: none;
+  }
+}
