--- a/src/blocks/cart-items-list/cart-items-list.css
+++ b/src/blocks/cart-items-list/cart-items-list.css
@@ -8,3 +8,9 @@
   justify-content: flex-start;
   gap: 32px;
 }
+
+@media screen and (max-width: 1023px) {
+  .cart-items-list {
+    gap: 16px;
+  }
+}
