--- a/src/blocks/quantity-input/quantity-input.css
+++ b/src/blocks/quantity-input/quantity-input.css
@@ -10,3 +10,10 @@
   justify-content: center;
   overflow: hidden;
 }
+
+@media screen and (max-width: 1023px) {
+  .quantity-input {
+    width: 80px;
+    height: 32px;
+  }
+}
