--- a/src/blocks/section/__subtext/_quantity-left/section__subtext_quantity-left.css
+++ b/src/blocks/section/__subtext/_quantity-left/section__subtext_quantity-left.css
@@ -2,3 +2,11 @@
   color: #F55123;
   align-self: flex-start;
 }
+
+@media screen and (max-width: 1023px) {
+  .section__subtext_quantity-left {
+    position: absolute;
+    top: 8px;
+    left: 96px;
+  }
+}
