--- a/src/blocks/cart-contents/__list/cart-contents__list.css
+++ b/src/blocks/cart-contents/__list/cart-contents__list.css
@@ -1,3 +1,9 @@
 .cart-contents__list {
   margin-top: 11px;
 }
+
+@media screen and (max-width: 1023px) {
+  .cart-contents__list {
+    margin-top: 17px;
+  }
+}
