--- a/src/blocks/cart-contents/__wrapper/cart-contents__wrapper.css
+++ b/src/blocks/cart-contents/__wrapper/cart-contents__wrapper.css
@@ -6,3 +6,9 @@
   align-items: center;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 1023px) {
+  .cart-contents__wrapper {
+    margin-top: 15px;
+  }
+}
