--- a/src/blocks/cart-items-list/__content-wrapper/cart-items-list__content-wrapper.css
+++ b/src/blocks/cart-items-list/__content-wrapper/cart-items-list__content-wrapper.css
@@ -7,3 +7,9 @@
   box-sizing: border-box;
   padding-left: 22px;
 }
+
+@media screen and (max-width: 1023px) {
+  .cart-items-list__content-wrapper {
+    padding-left: 0;
+  }
+}
