--- a/src/blocks/cart-items-list/__info-icon/cart-items-list__info-icon.css
+++ b/src/blocks/cart-items-list/__info-icon/cart-items-list__info-icon.css
@@ -3,3 +3,9 @@
   height: 20px;
   object-fit: cover;
 }
+
+@media screen and (max-width: 1023px) {
+  .cart-items-list__info-icon {
+    display: none;
+  }
+}
