--- a/src/blocks/cart-items-list/__item-photo/cart-items-list__item-photo.css
+++ b/src/blocks/cart-items-list/__item-photo/cart-items-list__item-photo.css
@@ -6,3 +6,11 @@
   border-radius: 8px;
   background: rgba(0, 0, 0, 0.05);
 }
+
+@media screen and (max-width: 1023px) {
+  .cart-items-list__item-photo {
+    margin-left: 0;
+    width: 80px;
+    height: 106px;
+  }
+}
