--- a/src/blocks/cart-items-list/__item/cart-items-list__item.css
+++ b/src/blocks/cart-items-list/__item/cart-items-list__item.css
@@ -6,4 +6,12 @@
   align-items: flex-start;
   justify-content: space-between;
   column-gap: 17px;
+  row-gap: 12px;
+}
+
+@media screen and (max-width: 1023px) {
+  .cart-items-list__item {
+    flex-direction: column;
+    justify-content: flex-start;
+  }
 }
