--- a/src/blocks/cart-items-list/__like-delete-buttons/cart-items-list__like-delete-buttons.css
+++ b/src/blocks/cart-items-list/__like-delete-buttons/cart-items-list__like-delete-buttons.css
@@ -5,3 +5,9 @@
   justify-content: flex-end;
   gap: 16px;
 }
+
+@media screen and (max-width: 1023px) {
+  .cart-items-list__like-delete-buttons {
+    gap: 24px;
+  }
+}
