--- a/src/blocks/cart-items-list/__price/cart-items-list__price.css
+++ b/src/blocks/cart-items-list/__price/cart-items-list__price.css
@@ -8,3 +8,10 @@
   letter-spacing: -0.2px;
   text-align: right;
 }
+
+@media screen and (max-width: 1023px) {
+  .cart-items-list__price {
+    font-size: 16px;
+    line-height: 26px;
+  }
+}
