--- a/src/blocks/content/__column/content__column.css
+++ b/src/blocks/content/__column/content__column.css
@@ -7,3 +7,10 @@
   align-items: stretch;
   gap: 34px;
 }
+
+@media screen and (max-width: 1023px) {
+  .content__column {
+    margin-top: 0;
+    gap: 42px;
+  }
+}
