--- a/src/blocks/header/__logo-wrapper/header__logo-wrapper.css
+++ b/src/blocks/header/__logo-wrapper/header__logo-wrapper.css
@@ -5,3 +5,9 @@
   justify-content: flex-start;
   gap: 16px;
 }
+
+@media screen and (max-width: 1023px) {
+  .header__logo-wrapper {
+    gap: 20px;
+  }
+}
