--- a/src/blocks/main/__container/main__container.css
+++ b/src/blocks/main/__container/main__container.css
@@ -5,3 +5,9 @@
   max-width: 1400px;
   width: 100%;
 }
+
+@media screen and (max-width: 1023px) {
+  .main__container {
+    padding: 15px 16px 34px;
+  }
+}
