--- a/src/blocks/page/__header/page__header.css
+++ b/src/blocks/page/__header/page__header.css
@@ -2,8 +2,8 @@
   padding: 16px 0 42px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1023px) {
   .page__header {
-    padding: 14px 13px;
+    padding: 14px 0 40px;
   }
 }
