--- a/src/blocks/section/__main-title/section__main-title.css
+++ b/src/blocks/section/__main-title/section__main-title.css
@@ -8,3 +8,12 @@
   letter-spacing: -0.28px;
   text-align: left;
 }
+
+@media screen and (max-width: 1023px) {
+  .section__main-title {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 28px;
+    letter-spacing: -0.2px;
+  }
+}
