--- a/src/blocks/content/__section-wrapper/content__section-wrapper.css
+++ b/src/blocks/content/__section-wrapper/content__section-wrapper.css
@@ -2,9 +2,18 @@
   width: 100%;
   margin-top: 6px;
   margin-bottom: 16px;
+  padding-inline: 24px;
   display: flex;
   flex-direction: column;
   align-items: stretch;
   justify-content: flex-start;
   gap: 16px;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 1023px) {
+  .content__section-wrapper {
+    padding-inline: 0;
+    gap: 12px;
+  }
 }
