--- a/src/blocks/delivery-method/__goods-photos/delivery-method__goods-photos.css
+++ b/src/blocks/delivery-method/__goods-photos/delivery-method__goods-photos.css
@@ -8,3 +8,9 @@
   justify-content: flex-start;
   gap: 8px;
 }
+
+@media screen and (max-width: 1023px) {
+  .delivery-method__goods-photos {
+    margin-top: 12px;
+  }
+}
