--- a/src/blocks/recipient/__form-row/recipient__form-row.css
+++ b/src/blocks/recipient/__form-row/recipient__form-row.css
@@ -8,3 +8,10 @@
   justify-content: stretch;
   align-content: start;
 }
+
+@media screen and (max-width: 1023px) {
+  .recipient__form-row {
+    grid-template-columns: 1fr;
+    row-gap: 26px;
+  }
+}
