--- a/src/blocks/absent-goods/__list/absent-goods__list.css
+++ b/src/blocks/absent-goods/__list/absent-goods__list.css
@@ -1,3 +1,9 @@
 .absent-goods__list {
   margin-top: 11px;
 }
+
+@media screen and (max-width: 1023px) {
+  .absent-goods__list {
+    margin-top: 19px;
+  }
+}
