--- a/src/blocks/cart-items-list/__buttons/cart-items-list__buttons.css
+++ b/src/blocks/cart-items-list/__buttons/cart-items-list__buttons.css
@@ -12,7 +12,6 @@
     width: 100%;
     flex-direction: row;
     align-items: center;
-    justify-content: flex-start;
-    column-gap: 132px;
+    justify-content: space-between;
   }
 }
