--- a/src/blocks/cart-items-list/__item-name/cart-items-list__item-name.css
+++ b/src/blocks/cart-items-list/__item-name/cart-items-list__item-name.css
@@ -18,6 +18,6 @@
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
-    width: 192px;
+    width: 100%;
   }
 }
