--- a/src/blocks/cart-items-list/__text-wrapper/cart-items-list__text-wrapper.css
+++ b/src/blocks/cart-items-list/__text-wrapper/cart-items-list__text-wrapper.css
@@ -12,6 +12,7 @@
 @media screen and (max-width: 1023px) {
   .cart-items-list__text-wrapper {
     row-gap: 0;
-    max-width: 288px;
+    width: 100%;
+    max-width: 100%;
   }
 }
