--- a/src/blocks/change-button/change-button.css
+++ b/src/blocks/change-button/change-button.css
@@ -9,3 +9,9 @@
   font-weight: 700;
   color: #CB11AB;
 }
+
+@media screen and (max-width: 1023px) {
+  .change-button {
+    line-height: 24px;
+  }
+}
