--- a/src/blocks/delivery-method/__free-return-info/delivery-method__free-return-icon.css
+++ b/src/blocks/delivery-method/__free-return-info/delivery-method__free-return-icon.css
@@ -6,3 +6,11 @@
   justify-content: flex-start;
   gap: 8px;
 }
+
+@media screen and (max-width: 1023px) {
+  .delivery-method__free-return-info {
+    margin-top: 6px;
+    padding-left: 8px;
+    justify-content: center;
+  }
+}
