--- a/src/blocks/delivery-method/__row/delivery-method__row.css
+++ b/src/blocks/delivery-method/__row/delivery-method__row.css
@@ -3,5 +3,12 @@
   flex-direction: row;
   align-items: flex-start;
   justify-content: flex-start;
-  gap: 32px;
+  column-gap: 32px;
+}
+
+@media screen and (max-width: 1023px) {
+  .delivery-method__row {
+    flex-direction: column;
+    row-gap: 0;
+  }
 }
