--- a/src/blocks/info-block/_recipient/info-block_recipient.css
+++ b/src/blocks/info-block/_recipient/info-block_recipient.css
@@ -1,3 +1,10 @@
 .info-block_recipient {
   padding: 16px 24px 43px;
 }
+
+@media screen and (max-width: 1023px) {
+  .info-block_recipient {
+    padding: 16px 16px 40px;
+  }
+}
+
