--- a/src/blocks/info-block/info-block.css
+++ b/src/blocks/info-block/info-block.css
@@ -7,3 +7,9 @@
   align-items: flex-start;
   gap: 24px;
 }
+
+@media screen and (max-width: 1023px) {
+  .info-block {
+    padding: 16px 16px 24px;
+  }
+}
