--- a/src/blocks/main/__container/main__container.css
+++ b/src/blocks/main/__container/main__container.css
@@ -1,6 +1,6 @@
 .main__container {
   margin: 0 auto;
-  padding: 22px 24px 34px;
+  padding: 22px 0 34px;
   box-sizing: border-box;
   max-width: 1400px;
   width: 100%;
@@ -8,6 +8,6 @@
 
 @media screen and (max-width: 1023px) {
   .main__container {
-    padding: 15px 16px 34px;
+    padding: 15px 0 34px;
   }
 }
