--- a/src/blocks/recipient/__form/recipient__form.css
+++ b/src/blocks/recipient/__form/recipient__form.css
@@ -5,5 +5,11 @@
   flex-direction: column;
   align-items: stretch;
   justify-content: flex-start;
-  gap: 18px;
+  row-gap: 18px;
+}
+
+@media screen and (max-width: 1023px) {
+  .recipient__form {
+    row-gap: 26px;
+  }
 }
