fix: layout fixes

--- a/src/blocks/order-summary/__highlighted-info/order-summary__highlighted-info.css
+++ b/src/blocks/order-summary/__highlighted-info/order-summary__highlighted-info.css
@@ -2,6 +2,12 @@
   width: 100%;
   padding: 8px 8px 12px;
   border-radius: 8px;
-  background: #F6F6FA;
+  background-color: #F6F6FA;
   box-sizing: border-box;
+}
+
+@media screen and (max-width: 1023px) {
+  .order-summary__highlighted-info {
+    background-color: #F0ECF4;
+  }
 }
