--- a/src/blocks/cart-items-list/__buttons-price/cart-items-list__buttons-price.css
+++ b/src/blocks/cart-items-list/__buttons-price/cart-items-list__buttons-price.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  justify-content: flex-end;
+  justify-content: center;
   gap: 16px;
 }
 
