--- a/src/blocks/cart-items-list/__mobile-price-wrapper/cart-items-list__mobile-price-wrapper.css
+++ b/src/blocks/cart-items-list/__mobile-price-wrapper/cart-items-list__mobile-price-wrapper.css
@@ -1,7 +1,7 @@
 .cart-items-list__mobile-price-wrapper {
   display: none;
   flex-direction: row;
-  align-items: flex-end;
+  align-items: center;
   justify-content: flex-start;
   column-gap: 5px;
 }
