--- a/src/blocks/content/__goods-section-wrapper/content__goods-section-wrapper.css
+++ b/src/blocks/content/__goods-section-wrapper/content__goods-section-wrapper.css
@@ -1,10 +1,15 @@
 .content__goods-section-wrapper {
-  padding-inline: 24px;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 35px;
 }
 
 @media screen and (max-width: 1023px) {
   .content__goods-section-wrapper {
     padding-inline: 16px;
+    gap: 44px
   }
 }
