--- a/src/blocks/order-summary/order-summary.css
+++ b/src/blocks/order-summary/order-summary.css
@@ -1,3 +1,10 @@
 .order-summary {
   box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.30), 0 2px 10px 0 rgba(0, 0, 0, 0.15);
 }
+
+@media screen and (max-width: 1023px) {
+  .order-summary {
+    box-shadow: none;
+    background-color: transparent;
+  }
+}
