--- a/src/blocks/page/__footer/page__footer.css
+++ b/src/blocks/page/__footer/page__footer.css
@@ -2,3 +2,10 @@
   padding-bottom: 24px;
   padding-inline: 24px;
 }
+
+@media screen and (max-width: 1023px) {
+  .page__footer {
+    margin-bottom: 56px;
+    padding-inline: 16px;
+  }
+}
