--- a/src/blocks/section/__title/_cost-details/section__title_cost-details.css
+++ b/src/blocks/section/__title/_cost-details/section__title_cost-details.css
@@ -1,3 +1,10 @@
 .section__title_cost-details {
   margin: 0 0 8px;
 }
+
+@media screen and (max-width: 1023px) {
+  .section__title_cost-details {
+    margin: 0 0 6px;
+  }
+}
+
