--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -55,6 +55,20 @@
 @import url(../blocks/item-count-badge/item-count-badge.css);
 @import url(../blocks/item-count-badge/_header/item-count-badge_header.css);
 @import url(../blocks/item-count-badge/_delivery-method/item-count-badge_delivery-method.css);
+@import url(../blocks/item-count-badge/_mobile-nav/item-count-badge_mobile-nav.css);
+
+@import url(../blocks/item-size-badge/item-size-badge.css);
+@import url(../blocks/item-size-badge/_goods/item-size-badge_goods.css);
+@import url(../blocks/item-size-badge/__text/item-size-badge__text.css);
+
+@import url(../blocks/mobile-nav/mobile-nav.css);
+@import url(../blocks/mobile-nav/__links/mobile-nav__links.css);
+@import url(../blocks/mobile-nav/__home-link/mobile-nav__home-link.css);
+@import url(../blocks/mobile-nav/__catalog-link/mobile-nav__catalog-link.css);
+@import url(../blocks/mobile-nav/__cart-link/mobile-nav__cart-link.css);
+@import url(../blocks/mobile-nav/__cart-link/_active/mobile-nav__cart-link_active.css);
+@import url(../blocks/mobile-nav/__favorites-link/mobile-nav__favorites-link.css);
+@import url(../blocks/mobile-nav/__profile-link/mobile-nav__profile-link.css);
 
 @import url(../blocks/main/main.css);
 @import url(../blocks/main/__container/main__container.css);
@@ -77,6 +91,7 @@
 @import url(../blocks/cart-items-list/__buttons-price/cart-items-list__buttons-price.css);
 @import url(../blocks/cart-items-list/__buttons/cart-items-list__buttons.css);
 @import url(../blocks/cart-items-list/__like-delete-buttons/cart-items-list__like-delete-buttons.css);
+@import url(../blocks/cart-items-list/__like-delete-buttons/_missing/cart-items-list__like-delete-buttons_missing.css);
 @import url(../blocks/cart-items-list/__price-wrapper/cart-items-list__price-wrapper.css);
 @import url(../blocks/cart-items-list/__mobile-price-wrapper/cart-items-list__mobile-price-wrapper.css);
 @import url(../blocks/cart-items-list/__price/cart-items-list__price.css);
@@ -90,6 +105,7 @@
 @import url(../blocks/checkbox/checkbox.css);
 @import url(../blocks/checkbox/__input/checkbox__input.css);
 @import url(../blocks/checkbox/__span/checkbox__span.css);
+@import url(../blocks/checkbox/__span/_order-summary/checkbox__span_order-summary.css);
 @import url(../blocks/checkbox/_position/checkbox_position.css);
 
 @import url(../blocks/dropdown/__button/dropdown__button.css);
@@ -123,6 +139,8 @@
 @import url(../blocks/order-summary/__checkbox-wrapper/order-summary__checkbox-wrapper.css);
 @import url(../blocks/order-summary/__terms-of-use-container/order-summary__terms-of-use-container.css);
 @import url(../blocks/order-summary/__card-number/order-summary__card-number.css);
+@import url(../blocks/order-summary/__button-wrapper/order-summary__button-wrapper.css);
+@import url(../blocks/info-block/_order-summary/info-block_order-summary.css);
 
 @import url(../blocks/submit-button/submit-button.css);
 @import url(../blocks/submit-button/_order-summary/submit-button_order-summary.css);
