--- a/src/blocks/order-summary/__order-details/order-summary__order-details.css
+++ b/src/blocks/order-summary/__order-details/order-summary__order-details.css
@@ -2,7 +2,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: flex-start;
   gap: 12px;
 }
