--- a/src/blocks/cart-items-list/__price/_bigger-price/cart-items-list__price_bigger-price.css
+++ b/src/blocks/cart-items-list/__price/_bigger-price/cart-items-list__price_bigger-price.css
@@ -1,4 +1,10 @@
 .cart-items-list__price_bigger-price {
-  font-size: 15px;
-  line-height: 24px;
+  font-size: 16px;
+  line-height: 16px;
+}
+
+@media screen and (max-width: 1023px) {
+  .cart-items-list__price_bigger-price {
+    line-height: 26px;
+  }
 }
