--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -184,6 +184,8 @@
 @import url(../blocks/recipient/__input/recipient__input.css);
 @import url(../blocks/recipient/__input/_invalid/recipient__input_invalid.css);
 @import url(../blocks/recipient/__label/recipient__label.css);
+@import url(../blocks/recipient/__error-message/recipient__error-message.css);
+@import url(../blocks/recipient/__error-message/_visible/recipient__error-message_visible.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/page/__footer/page__footer.css);
