--- a/src/blocks/cart-items-list/_missing-goods/cart-items-list_missing-goods.css
+++ b/src/blocks/cart-items-list/_missing-goods/cart-items-list_missing-goods.css
@@ -1,5 +1,10 @@
+.cart-items-list_missing-goods {
+  margin-top: 11px;
+}
+
 @media screen and (max-width: 1023px) {
   .cart-items-list_missing-goods {
+    margin-top: 19px;
     gap: 20px;
   }
 }
