--- a/src/blocks/cart-items-list/__text-wrapper/cart-items-list__text-wrapper.css
+++ b/src/blocks/cart-items-list/__text-wrapper/cart-items-list__text-wrapper.css
@@ -4,4 +4,11 @@
   align-items: flex-start;
   justify-content: flex-start;
   row-gap: 8px;
+  max-width: 309px;
+}
+
+@media screen and (max-width: 1023px) {
+  .cart-items-list__text-wrapper {
+    max-width: 100%;
+  }
 }
