--- a/src/blocks/info-tooltip/info-tooltip.css
+++ b/src/blocks/info-tooltip/info-tooltip.css
@@ -1,15 +1,16 @@
 .info-tooltip {
   width: 280px;
-  height: 104px;
+  height: fit-content;
   box-sizing: border-box;
   padding: 11px 16px 13px;
   background-color: #ffffff;
   border-radius: 8px;
   filter: drop-shadow(0px 0px 1px rgba(0, 0, 0, 0.30)) drop-shadow(0px 2px 10px rgba(0, 0, 0, 0.15));
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
   row-gap: 8px;
   position: absolute;
+  z-index: 2;
 }
