feat: discount tooltip

--- a/src/blocks/cart-items-list/__old-price-with-currency/cart-items-list__old-price-with-currency.css
+++ b/src/blocks/cart-items-list/__old-price-with-currency/cart-items-list__old-price-with-currency.css
@@ -2,6 +2,7 @@
   border-bottom: 1px dashed rgba(0, 0, 0, 0.20);
   text-align: right;
   position: relative;
+  cursor: pointer;
 }
 
 .cart-items-list__old-price-with-currency::after {
