feat: quantityInput functionality

--- a/src/blocks/quantity-input/__button/quantity-input__button.css
+++ b/src/blocks/quantity-input/__button/quantity-input__button.css
@@ -17,6 +17,11 @@
   outline: none;
 }
 
+.quantity-input__button[disabled] {
+  opacity: 0.2;
+  cursor: not-allowed;
+}
+
 @media screen and (max-width: 1023px) {
   .quantity-input__button {
 
