--- a/src/blocks/submit-button/_payment-popup/submit-button_payment-popup.css
+++ b/src/blocks/submit-button/_payment-popup/submit-button_payment-popup.css
@@ -2,3 +2,9 @@
   margin-top: 139px;
   width: 164px;
 }
+
+@media screen and (max-width: 1023px) {
+  .submit-button_payment-popup {
+    margin-top: 349px;
+  }
+}
