--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -126,6 +126,7 @@
 @import url(../blocks/delete-button/delete-button.css);
 
 @import url(../blocks/absent-goods/__title-wrapper/absent-goods__title-wrapper.css);
+@import url(../blocks/absent-goods/__dropdown-title/absent-goods__dropdown-title.css);
 
 @import url(../blocks/info-block/info-block.css);
 @import url(../blocks/info-block/__title-wrapper/info-block__title-wrapper.css);
@@ -144,6 +145,8 @@
 @import url(../blocks/order-summary/__terms-of-use-container/order-summary__terms-of-use-container.css);
 @import url(../blocks/order-summary/__card-number/order-summary__card-number.css);
 @import url(../blocks/order-summary/__button-wrapper/order-summary__button-wrapper.css);
+@import url(../blocks/order-summary/__total-price-wrapper/order-summary__total-price-wrapper.css);
+@import url(../blocks/order-summary/__details-wrapper/order-summary__details-wrapper.css);
 @import url(../blocks/info-block/_order-summary/info-block_order-summary.css);
 
 @import url(../blocks/submit-button/submit-button.css);
